<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dv606.el222ja.assignment2.AlarmClock"
    tools:showIn="@layout/activity_alarm_clock">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time_label"
        android:id="@+id/currentText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/currentTime"
        android:layout_below="@+id/currentText"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_alarm_label"
        android:id="@+id/alarmText"
        android:textSize="30dp"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/currentText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30dp"
        android:id="@+id/alarmTime"
        android:layout_below="@+id/alarmText"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm_button"
        android:id="@+id/buttonAlarm"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_alarm_button"
        android:id="@+id/removeAlarm"
        android:layout_alignTop="@+id/buttonAlarm"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
