<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dv606.el222ja.assignment2.SetAlarmTime"
    tools:showIn="@layout/activity_set_alarm_time">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time_button"
        android:id="@+id/setTime"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm_label"
        android:id="@+id/alarmText"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:timePickerMode="spinner"
        android:layout_below="@+id/alarmText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wake Up!"
        android:id="@+id/message"
        android:gravity="center"
        android:layout_below="@+id/messageText"
        android:layout_alignStart="@+id/setTime"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_message_label"
        android:id="@+id/messageText"
        android:textSize="30dp"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
